app/styles/main.scss
$icon-font-path: "/bower_components/sass-bootstrap/fonts/";

@import 'sass-bootstrap/lib/bootstrap';
@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,300,700);
* {
    font-family: 'Open Sans', sans-serif;  
}
.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* Space out content a bit */
body {
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: #fff;
}



/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
    padding-left: 15px;
    padding-right: 15px;
}

/* Custom page header */
.header {
    position: relative;
    text-align: center;
    height: 170px;
    margin-bottom: 20px;


    h1 {
        font-family: 'Open Sans', sans-serif;
        font-size: 48px;
        display: inline-block;
    }

    h4 {
        font-family: 'Open Sans', sans-serif;
        display: block;
    }
}

/* Make the masthead heading the same height as the navigation */
.header h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
}

/* Custom page footer */
.footer {
    padding-top: 10px;
    color: #777;
    border-top: 1px solid #e5e5e5;

    p {
        float: right;
        display: inline-block;
        margin-top: 8px;
    }
}

.container-narrow > hr {
    margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
    text-align: center;
    padding: 15px;

}

.jumbotron .btn {
    font-size: 21px;
    padding: 14px 24px;
}

/* Supporting marketing content */
.marketing {
    margin: 40px 0;
    height: 670px;
}

.marketing p + h4 {
    margin-top: 28px;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
    .container {
        max-width: 960px;
    }

    /* Remove the padding we set earlier */
    .header,
    .marketing,
    .footer {
        padding-left: 0;
        padding-right: 0;
    }
    /* Space out the masthead */
    .header {
        margin-bottom: 50px;
    }
    /* Remove the bottom border on the jumbotron for visual effect */
    .jumbotron {
        border-bottom: 0;

    }
}

#more {
    display: inline-block;
}

.circles{
    border-radius: 50%;
    height: 150px;
    width: 160px;
}

.ben {
    float: right;
}

.face {
    float: right;
    border-radius: 30px;
    height: 225px;
    width: 215px;
    margin-left: 20px;
    margin-bottom: 55px;
    position: relative;
    top: 25px;
}


.project-info {
    border: 1px solid #494949;
}

.github {
    display: inline-block;
    width: 160px;
    margin: 12px auto;
    font-size: 15px;
}


#mobber {
    width: 480px;
    height: 420px;
    margin: 20px auto;
    margin-bottom: 26px;
    border: 1px solid #bebbbb;
    border-radius: 4px;
}

#mobber-thumb{
    border-left: none;
}

#wp {
    width: 600px;
    height: 390px;
    margin: 26px auto;
    border-radius: 4px;
    /*border: 1px solid #494949;*/

}
#task {
    width: 700px;
    height: 350px;
    margin: 30px auto;
    border-radius: 6px;
}

#flackaburro {
    width: 700px;
    height: 400px;
    margin: 10px auto;
    /*border: 2px solid grey;*/
    border-radius: 6px;
}

.slides p {
    margin: -13px auto;
    width: 560px;
    text-align: center;
    color: #504C4C;
}


.icon {
    display: inline-block;
    height: 125px;
    width: 125px;
    margin-left: 30px;
    margin-right: 25px;
    border-radius: 50%;
    border: 2px solid #BEBBBB;
}

#octocat-hub {
    height: 30px;
    width: 30px;
    border-radius: 50%;
    margin-right: -3px;
    position: relative;
    left: -10px;
}

#email {
    display: inline-block;
    height: 40px;
    margin-right: 10px;
}

#phone {
    margin-left: 10px;
}

.find-h4 {
    margin-top: 5px !important;
  }

.ironyard{
    /*display: inline;*/
}
/*
 * jQuery FlexSlider v2.2.0
 * http://www.woothemes.com/flexslider/
 *
 * Copyright 2012 WooThemes
 * Free to use under the GPLv2 license.
 * http://www.gnu.org/licenses/gpl-2.0.html
 *
 * Contributing author: Tyler Smith (@mbmufffin)
 


/* Browser Resets
*********************************/
.flex-container a:active,
.flexslider a:active,
.flex-container a:focus,
.flexslider a:focus  {outline: none;}
.slides,
.flex-control-nav,
.flex-direction-nav {margin: 0; padding: 0; list-style: none;}

/* Icon Fonts
*********************************/
/* Font-face Icons */
@font-face {
    font-family: 'flexslider-icon';
    src:url('fonts/flexslider-icon.eot');
    src:url('fonts/flexslider-icon.eot?#iefix') format('embedded-opentype'),
        url('fonts/flexslider-icon.woff') format('woff'),
        url('fonts/flexslider-icon.ttf') format('truetype'),
        url('fonts/flexslider-icon.svg#flexslider-icon') format('svg');
    font-weight: normal;
    font-style: normal;
}

/* FlexSlider Necessary Styles
*********************************/
.flexslider {margin: 0; padding: 0;}
.flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
.flexslider .slides img {width: 100%; display: block;}
.flex-pauseplay span {text-transform: capitalize;}

/* Clearfix for the .slides element */
.slides:after {content: "\0020"; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;}
html[xmlns] .slides {display: block;}
* html .slides {height: 1%;}

/* No JavaScript Fallback */
/* If you are not using another script, such as Modernizr, make sure you
 * include js that eliminates this class on page load */
.no-js .slides > li:first-child {display: block;}

/* FlexSlider Default Theme
*********************************/
.flexslider { margin: 0 0 60px; background: #EBEBEB; position: relative; -webkit-border-radius: 4px; -moz-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: inset 0px 1px 6px #bebbbb; -moz-box-shadow: inset 0px 1px 6px #bebbbb; -o-box-shadow: 0 1px 4px rgba(0,0,0,.2); box-shadow: inset 0px 1px 6px #bebbbb; zoom: 1; }
.flex-viewport { max-height: 650px; height: 500px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; -o-transition: all 1s ease; transition: all 1s ease; }
.loading .flex-viewport { max-height: 350px; }
.flexslider .slides { zoom: 1; }
.carousel li { margin-right: 5px; }

/* Direction Nav */
.flex-direction-nav {*height: 0;}
.flex-direction-nav a  {  display: block; width: 40px; height: 40px; margin: -20px 0 0; position: absolute; top: 33%; z-index: 10; overflow: hidden; opacity: 0; cursor: pointer; color: rgba(0,0,0,0.8); text-shadow: 1px 1px 0 rgba(255,255,255,0.3); -webkit-transition: all .3s ease; -moz-transition: all .3s ease; transition: all .3s ease; }
.flex-direction-nav .flex-prev { background: url('/images/previous.png'); left: -50px;}
.flex-direction-nav .flex-next { background: url('/images/next.png'); right: -50px; text-align: right; }
.flexslider:hover .flex-prev { opacity: 0.7; left: 10px; }
.flexslider:hover .flex-next { opacity: 0.7; right: 10px; }
.flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover { opacity: 1;text-decoration: none; }
.flex-direction-nav .flex-disabled { opacity: 0!important; filter:alpha(opacity=0); cursor: default; }
/*.flex-direction-nav a:before  { font-family: "flexslider-icon"; font-size: 40px; display: inline-block; content: '\f001'; }*/
.flex-direction-nav a.flex-next:before  { content: '\f002'; }

/* Pause/Play */
.flex-pauseplay a { display: block; width: 20px; height: 20px; position: absolute; bottom: 5px; left: 10px; opacity: 0.8; z-index: 10; overflow: hidden; cursor: pointer; color: #000; }
.flex-pauseplay a:before  { /*font-family: "flexslider-icon"*/; font-size: 20px; display: inline-block; content: '\f004'; }
.flex-pauseplay a:hover  { opacity: 1; }
.flex-pauseplay a.flex-play:before { content: '\f003'; }

/* Control Nav */
.flex-control-nav {width: 100%; position: absolute; bottom: -40px; text-align: center;}
.flex-control-nav li {margin: 0 6px; display: inline-block; zoom: 1; *display: inline;}
.flex-control-paging li a {width: 11px; height: 11px; display: block; background: #666; background: rgba(0,0,0,0.5); cursor: pointer; text-indent: -9999px; -webkit-border-radius: 20px; -moz-border-radius: 20px; -o-border-radius: 20px; border-radius: 20px; -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); -moz-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); -o-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); box-shadow: inset 0 0 3px rgba(0,0,0,0.3); }
.flex-control-paging li a:hover { background: #333; background: rgba(0,0,0,0.7); }
.flex-control-paging li a.flex-active { background: #000; background: rgba(0,0,0,0.9); cursor: default; }

.flex-control-thumbs {margin: 5px 0 0; position: static; overflow: hidden; border-top: 1px solid #bebbbb; border-radius: 0px 0px 2px 2px;}
.flex-control-thumbs li {width: 25%; float: left; margin: 0;}
.flex-control-thumbs img {width: 100%; height: 190px; background: #71A6DF; border-left: 1px solid #bebbbb; border-bottom: 1px solid #bebbbb; display: block; opacity: .7; cursor: pointer;}
.flex-control-thumbs img:hover {opacity: 1;}
.flex-control-thumbs .flex-active {opacity: 1; cursor: default;}

@media screen and (max-width: 860px) {
  .flex-direction-nav .flex-prev { opacity: 1; left: 10px;}
  .flex-direction-nav .flex-next { opacity: 1; right: 10px;}
}

